styled dark mode toggle button & fixed header height for all paths

--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@ body {
 
 .wrapper-dark {
   background-color: #282D35;
-  color: rgba(255, 255, 255, 0.5);
+  color: rgba(255, 255, 255, 0.9);
   transition: 0.5s;
 }
 
@@ -31,7 +31,7 @@ img {
   /* display: flex by default */
   justify-content: space-between;
   background-color: #0d1117;
-  padding: 5px 10px 0px 7px !important;
+  padding: 5px 12px 0px 7px !important;
   font-size: 1.1em;
 }
 
@@ -46,9 +46,82 @@ img {
   color: rgba(115, 115, 115, 0.99);;
 }
 
-/* .nav--toggle {
-  background-color: gray;
-} */
+.nav--toggle {
+  position: absolute;
+  right: 12px;
+  display: inherit;
+  margin-top: 4px;
+  align-items: center;
+}
+
+.nav--toggle > p {
+  margin-bottom: 0;
+  font-size: 12px;
+  color: #FFFFFFE6;
+}
+
+.nav--toggle--switch {
+  position: relative;
+  display: inline-block;
+  width: 50px;
+  height: 24px;
+  margin: 0px 5px;
+}
+
+/* Hide default HTML checkbox */
+.nav--toggle--switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.nav--toggle--slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.nav--toggle--slider:before {
+  position: absolute;
+  content: "";
+  height: 17px;
+  width: 17px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .nav--toggle--slider {
+  background-color: #282D35;
+}
+
+input:focus + .nav--toggle--slider {
+  box-shadow: 0 0 1px #282D35;
+}
+
+input:checked + .nav--toggle--slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.nav--toggle--slider.round {
+  border-radius: 34px;
+}
+
+.nav--toggle--slider.round:before {
+  border-radius: 50%;
+}
 
 
 /* ----------------------------------------------------------- */
@@ -57,7 +130,8 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-bottom: 32px;
+  padding-top: 4px;
+  padding-bottom: 36.4px;
 }
 
 .header--form--input {
@@ -81,14 +155,18 @@ img {
   /* to get rid of unwanted white space at the bottom */
 }
 
-.pagination {
+.main--pagination {
   display: flex;
   align-items: center;
   justify-content: center;
   padding-bottom: 48px;
 }
 
-.pagination > button {
+.main--pagination--h5 {
+  margin: 0.5px 7px;
+}
+
+.main--pagination > button {
   border-radius: 2px;
   font-weight: 500;
   color: rgba(0,0,0,0.7);
